# g29-py

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
etc/: Dockerfile
g29_py/: __init__.py  g29.py  hid.py
g29py/: __init__.py  g29.py  params.py
tests/: runner.py  test_g29.py  test_hid.py
