[tool.poetry]
name = "g29-py"
version = "0.1.0"
description = ""
authors = ["seanavery <seanpollock3344@gmail.com>"]
readme = "README.md"
packages = [{include = "g29_py"}]

[tool.poetry.dependencies]
python = "^3.8"
hid = "1.0.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core", "libhidapi-hidraw0"]
build-backend = "poetry.core.masonry.api"
