[tool.poetry]
name = "g29py"
version = "0.0.3"
description = "python driver for g29 wheel/pedals"
authors = ["sean pollock <seanap@protonmail.com>"]
readme = "README.md"
packages = [{include = "g29py"}]

[tool.poetry.dependencies]
python = "^3.8"
hid = "1.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core", "libhidapi-hidraw0"]
build-backend = "poetry.core.masonry.api"
